fixed a wrapping issue on buttons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,7 @@ input, select {
 	padding:2em;
 	font-size:2em;
 	line-height:0em;
+	white-space: normal;
 }
 
 
